# bam-tag-split

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: extract.hpp  extract_options.hpp  main.hpp  options.hpp  split.hpp
src/: extract.cpp  extract_options.cpp  main.cpp  options.cpp  split.cpp  split_options.cpp
